--- a/lesson1/Exercise1.ipynb
+++ b/lesson1/Exercise1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe2060e3",
+   "id": "0a72ce4d",
    "metadata": {},
    "source": [
     "## 姓名：李XX   班別：S3X   學號：99"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19591268",
+   "id": "17477112",
    "metadata": {},
    "source": [
     "# 練習一：\n",
@@ -26,14 +26,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0eddf5",
+   "id": "2dd1df68",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b95e8217",
+   "id": "dae3e359",
    "metadata": {},
    "source": [
     "# 練習二：\n",
@@ -49,14 +49,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278e3e30",
+   "id": "26b16878",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "77769294",
+   "id": "4241d6b1",
    "metadata": {},
    "source": [
     "# 練習三：\n",
@@ -76,10 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e789a458",
+   "id": "cb5fb6b3",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c87278e",
+   "metadata": {},
+   "source": [
+    "完成後把檔案上傳至以下dropbox:<br>\n",
+    "https://www.dropbox.com/scl/fo/047w9m17hckad39r2b4of/h?dl=0&rlkey=t8wx8h9ylto4zoaead5p8l5q0"
+   ]
   }
  ],
  "metadata": {
