--- a/lesson2/Exercise2.ipynb
+++ b/lesson2/Exercise2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1cb589e",
+   "id": "d7d1d4eb",
    "metadata": {},
    "source": [
     "## 姓名：李XX   班別：S3X   學號：99"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e905f3df",
+   "id": "5b57f506",
    "metadata": {},
    "source": [
     "# 練習一：\n",
@@ -22,14 +22,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8921aae",
+   "id": "6adff56e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d0b2ee82",
+   "id": "5a2efb8f",
    "metadata": {},
    "source": [
     "# 練習二：\n",
@@ -51,10 +51,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d0a9232",
+   "id": "b420f1a8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e082ee40",
+   "metadata": {},
+   "source": [
+    "完成後把檔案上傳至以下dropbox: <br>\n",
+    "https://www.dropbox.com/request/DNJF7XqHoXJYKiPi8lN9"
+   ]
   }
  ],
  "metadata": {
